# runar-rust

./: .gitignore  .gitmodules  .windsurfrules  CODE_IMPROVEMENT_CHECKLIST.md  CODE_STANDARDS.md  Cargo.toml  DESIGN_PAST_EVENTS.md  DESIGN_REPLICATION_DIFF_SYNC.md  DOCS_TASK.md  NETWORKING_REFACTOR_PLAN.md  NODE_KEY_MANAGER_REDESIGN.md  README.md  RECONNECTION_FIX_PLAN.md  REPOSITORY_OVERVIEW.md  SERIALIZER_REFACTOR_GOALS.md  cargo-wrapper.sh  clippy.toml  encryption_spec.md  format_fixes.md  improve_envelop_encryption.md  improve_hot_paths.md  init_git.sh  label_resolver_config.md  macro_test.rs  migration_work_log.md  mission.md  run-clippy.sh  rust_closure  standalone_node_discovery.rs  test_improvements.md  tmp_edit.rs  tmp_quic.rs  update_native_apis.md  validate_swift_vectors.rs
integration-tests/: COMPATIBILITY_ANALYSIS.md  Cargo.toml  Dockerfile.rust-transport  Dockerfile.swift-transport  Dockerfile.test-coordinator  README.md  SwiftTransportTest.swift  docker-compose.yml  run-tests.sh  rust-transport-test.rs
integration-tests/test-coordinator/: Cargo.toml
runar-cli/: Cargo.toml  README.md  cli.md  swift-spec.md
runar-cli/examples/: basic_usage.rs
runar-cli/src/: config.rs  init.rs  key_store.rs  lib.rs  main.rs  setup_server.rs  start.rs
runar-cli/tests/: cli_test.rs  e2e_init_test.rs  simple_init_test.rs
runar-common/: Cargo.toml  README.md  align_compact_id.md
runar-common/src/: lib.rs
runar-common/tests/: mod.rs  path_trie_test.rs  topic_path_template_test.rs  topic_path_wildcard_test.rs  value_type_test.rs  vmap_macro_test.rs  vmap_test.rs
runar-ffi/: Cargo.toml  DESIGN.md  build.rs  cbindgen.toml  design.md  issues.md  issues_02.md  runar_ffi.h
runar-ffi/include/: runar_ffi.h
runar-ffi/src/: lib.rs
runar-ffi/tests/: comprehensive_ffi_test.rs  cross_platform_tests.rs  ffi_keys_state_step_test.rs  ffi_keys_state_test.rs  ffi_lifecycle_test.rs  ffi_transport_test.rs  initialization_test.rs  linux_keystore_tests.rs  mod.rs
runar-gateway/: .gitignore  Cargo.toml  README.md
runar-gateway/src/: gateway.rs  lib.rs
runar-gateway/tests/: gateway_test.rs
runar-ios-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  ios-ffi.md
runar-ios-ffi/src/: callbacks.rs  error.rs  lib.rs  memory.rs  node.rs  runtime.rs  services.rs  types.rs
runar-keri/: .clippy.toml  Cargo.toml  keri_poc_with_keriox.md  keys_design_keri.md  storage_engine_analysis.md
runar-keri/src/: lib.rs  secure_storage.rs
runar-keri/tests/: delegation.rs  inception.rs  rotation.rs  witness.rs
runar-keys/: ANALYSIS.md  Cargo.toml  DESIGN.md  NATIVE_KEYSTORE_BACKENDS.md  NETWORK_PUBLIC_KEY_MIGRATION_ANALYSIS.md  PURE_X509_DESIGN.md  README.md  gaps_swift.md  improve_ffi.md  improve_keys.md
runar-keys-ffi/: Cargo.toml  DESIGN.md
runar-keys-ffi/src/: lib.rs
runar-keys/POC_1/: token.rs
runar-keys/src/: access_token.rs  certificate.rs  crypto.rs  derivation.rs  encryption.rs  envelope.rs  error.rs  hd.rs  key_derivation.rs  keystore.rs  lib.rs  macros.rs  manager.rs  mobile.rs  network.rs  node.rs  pure_x509.rs  types.rs
runar-keys/tests/: apple_keystore_macos_test.rs  certs_integration_test.rs  end_to_end_test.rs  hkdf_labels_test.rs  integration_test.rs  keys_integration.rs  keystore_trait_test.rs  pure_x509_parity_test.rs
runar-macros/: Cargo.toml  README.md  test_expand.rs
runar-macros-common/: Cargo.toml  LOGGER_MACROS_DESIGN.md  README.md
runar-macros-common/src/: lib.rs
runar-macros/src/: action.rs  lib.rs  meta_support.rs  publish.rs  service.rs  service_meta.rs  subscribe.rs  utils.rs
runar-macros/tests/: comment_robustness_test.rs  multiple_services_same_module.rs  primitive_only_service.rs  simple_service_macros.rs  vec_schema_test.rs
runar-node/: Cargo.toml  README.md  encryption_spec.md
runar-node-tests/: Cargo.toml
runar-node-tests/src/: lib.rs  mod.rs
runar-node/src/: lib.rs  node.rs
runar-node/tests/: event_metadata_test.rs  local_event_dispatch_test.rs  mod.rs  multi_subscription_test.rs  node_test.rs  registry_service_test.rs  service_registry_test.rs  service_registry_wildcard_test.rs
runar-nodejs-api/: Cargo.toml  TYPESCRIPT_E2E_ALIGNMENT_ANALYSIS.md  debug_test.js  design.md  index.d.ts  index.js  index.ts  issues.md  package-lock.json  package.json  tsconfig.json
runar-nodejs-api/src/: lib.rs
runar-nodejs-api/tests/: comprehensive_api_test.ts  comprehensive_lifecycle_test.ts  cross_platform_tests.ts  discovery_basic.test.ts  keys_basic.test.ts  keys_e2e.test.ts  test_utils.ts  transport_basic.test.ts  transport_test_utils.ts
runar-nodejs-ffi/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
runar-nodejs-ffi/src/: lib.rs
runar-nodejs-ffi/test/: highlevel.test.ts  simple.test.ts
runar-nodejs-ffi/ts/: dispatcher.ts  runtime.ts
runar-poc-ffi/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  poc.md
runar-poc-ffi/examples/: basic_usage.rs
runar-poc-ffi/src/: ffi.rs  lib.rs  tests.rs  transporter.rs  types.rs
runar-schemas/: Cargo.toml  README.md
runar-schemas/src/: lib.rs
runar-serializer/: CONTAINER_ENCRYPTION.md  Cargo.toml  DESIGN_REDESIGN.md  README.md  TYPE_NAME_SPEC.md
runar-serializer-macros/: Cargo.toml  README.md
runar-serializer-macros/src/: lib.rs
runar-serializer/src/: arc_value.rs  arc_value.rs_old  encryption.rs  erased_arc.rs  lib.rs  map_types.rs  primitive_types.rs  registry.rs  tests.rs  traits.rs  utils.rs  vec_types.rs
runar-serializer/tests/: arc_value_json_test.rs  mod.rs  (+18 more)
runar-services/: Cargo.toml  MISSION.md  README.md  data-replication.md  design.md
runar-test-utils/: Cargo.toml  README.md
runar-transport-tests/: Cargo.toml
runar-ts-ffi/: Cargo.toml  DESIGN.md  IMPLEMENTATION_STATUS.md  README.md  example.js  index.d.ts  index.js  node_ffi.md  package-lock.json  package.json  tsconfig.json
rust-examples/: Cargo.toml  README.md  gateway_example.rs  label_resolver_example.rs  rest_api_example.rs  serializer_vectors.rs  validate_swift_vectors.rs  validate_typescript_vectors.rs
utils/: Cargo.toml
(+366 files in other folders)
