[workspace]
members = [
    "rust-common",
    "rust-node",
    "rust-macros",
    # "rust-macros-tests", # Temporarily disabled due to missing submodule
    # Add other crates here as they become part of the workspace
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Runar Labs Rust Monorepo"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
uuid = { version = "1.3", features = ["v4"] }
bincode = "1.3.3"

# Common dev dependencies
# tokio-test = "0.4"
# criterion = { version = "0.5", features = ["async_tokio"] }
