[workspace]
members = [
    "runar-node",
    "runar-macros",
    "runar-common",
    "runar-services",
    "rust-examples/micro_services_demo",
    "runar-keys",
    "runar-gateway",
    "runar-keri",
    "rust-examples/simple",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Runar Node System"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

 
