[package]
name = "runar-cli"
version = "0.1.0"
edition = "2021"
description = "Runar CLI for node initialization and management"
authors = ["Runar Team"]
license = "MIT"
repository = "https://github.com/runar-labs/runar-rust"
homepage = "https://github.com/runar-labs/runar-rust"
readme = "README.md"
rust-version = "1.70"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
hex = "0.4"
uuid = { version = "1.3", features = ["v4"] }

# OS key store integration
keyring = "2.0"
base64 = "0.21"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# QR code generation
qrcode = "0.13"
image = "0.24"

# Network dependencies for setup server
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3"

# Signal handling for graceful shutdown
tokio-util = "0.7"

# Local dependencies
runar_common = "0.1"
runar-keys = { version = "0.1", path = "../runar-keys" }
runar_node = { version = "0.1", path = "../runar-node" }
runar_macros_common = { version = "0.1", path = "../runar-macros-common" }

# Logging
log = "0.4"
env_logger = "0.10"

# File system operations
dirs = "5.0"
tempfile = "3.0"

[dev-dependencies]
tokio-test = "0.4" 