[package]
name = "runar_common"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Almeida - rafael@iswe.co.nz"]
description = "Common traits and utilities for the Runar framework"
license = "MIT"
keywords = ["p2p", "encryption", "micro-services"]
categories = ["development-tools"]
readme = "README.md"
repository = "https://github.com/runar-labs/runar-rust"
homepage = "https://github.com/runar-labs/runar-rust"
documentation = "https://docs.rs/runar_common"
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.release]
allow-branch = ["main"]
tag-prefix = "runar_common-"
tag-name = "{{version}}"
pre-release-replacements = []

[package.metadata.crates-io]
categories = ["development-tools"]
keywords = ["p2p", "encryption", "micro-services"]

[features]
default = []
abstract_service = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
data-encoding = "2.5"
serde_bytes = "0.11"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
lazy_static = "1.4"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
bincode = "1.3.3"
rustc-hash = "1.1"
sha2 = "0.10"
prost = "0.12"
prost-derive = "0.12"