[package]
name = "runar_ffi"
version = "0.1.0"
edition = "2021"
description = "Unified FFI bridge for Runar Keys + Transporter"
license = "MIT"

[lib]
name = "runar_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
runar-keys = { path = "../runar-keys" }
runar_transporter = { path = "../runar-transporter" }
runar_common = { path = "../runar-common" }
runar-schemas = { path = "../runar-schemas" }
runar-serializer = { path = "../runar-serializer" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
once_cell = "1.19"
tokio = { version = "1.37", features = ["rt-multi-thread"] }
uuid = { version = "1.8", features = ["v4"] }
log = "0.4"
rustls-pki-types = "1.12"
anyhow = "1.0"

[build-dependencies]
cbindgen = "0.26"

[features]
default = []

