[package]
name = "runar_ffi"
version = "0.1.0"
edition = "2021"
description = "Unified FFI bridge for Runar Keys + Transporter"
license = "MIT"

[lib]
name = "runar_ffi"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
runar-keys = { path = "../runar-keys" }
runar_common = { path = "../runar-common" }
runar_transporter = { path = "../runar-transporter" }
runar-schemas = { path = "../runar-schemas" }
runar-serializer = { path = "../runar-serializer" }
once_cell = "1"
arc-swap = { package = "arc-swap", version = "1" }
serde_cbor = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
log = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rustls-pki-types = "1"

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
apple-keystore = ["runar-keys/apple-keystore"]
linux-keystore = ["runar-keys/linux-keystore"]

[dev-dependencies]
serde_cbor = "0.11"
libc = "0.2"
serde = { version = "1", features = ["derive"] }

