[package]
name = "runar-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Runar Gateway"
license = "MIT"

[dependencies]
async-trait = "0.1"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Added for crud_sqlite.rs
uuid = { version = "1.8", features = ["v4", "serde"] } # Added for crud_sqlite.rs
futures = "0.3"
tokio = { version = "1.37", features = ["sync", "rt", "macros", "rt-multi-thread"] }
runar_common = { path = "../runar-common", features = ["abstract_service"] }
runar_node = { path = "../runar-node" }
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
runar-serializer = { path = "../runar-serializer" }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "test-util"] }
runar_common = { path = "../runar-common", features = ["abstract_service"] }
runar_macros = { path = "../runar-macros" }
runar-test-utils = { path = "../runar-test-utils" }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# These are required for integration tests in tests/rusqlite_examples.rs
 prost = "0.12"
 prost-derive = "0.12"
