[package]
name = "runar-ios-ffi"
version = "0.1.0"
edition = "2021"
description = "iOS/macOS FFI bindings for Runar distributed system"
license = "MIT"
repository = "https://github.com/runar-rust/runar-rust"

[lib]
name = "runar_ios_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core Runar dependencies
runar_node = { path = "../runar-node" }
runar-keys = { path = "../runar-keys" }
runar_common = { path = "../runar-common" }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI utilities
libc = "0.2"
lazy_static = "1.4"
async-trait = "0.1"

# Platform-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.0"

[build-dependencies]
cbindgen = "0.24" 