[package]
name = "runar-ios-ffi"
version = "0.1.0"
edition = "2021"
description = "iOS/macOS FFI bindings for Runar distributed system"
license = "MIT"
repository = "https://github.com/runar-rust/runar-rust"

[lib]
name = "runar_ios_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Minimal dependencies for POC
libc = "0.2"

[build-dependencies]
cbindgen = "0.24" 