[package]
name = "runar-keri"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Runar KERI core wrapper leveraging keriox"
license = "MIT"

[dependencies]
# Proven KERI implementation
keri = { path = "../keriox", default-features = false, features = ["sled-db", "async"] }
# Shared workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
sled = "0.34"
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile = "3"
