[package]
name = "runar-keys-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "FFI layer exposing runar-keys APIs to Swift, Kotlin (and later NodeJS)"

[lib]
name = "runar_keys_ffi"
path = "src/lib.rs"
# We'll add cdylib/staticlib when we start exporting symbols
# crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
ffi = []
cbor = []

[dependencies]
runar-keys = { path = "../runar-keys" }
serde = { version = "1.0", features = ["derive"] }
ciborium = { version = "0.2", optional = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"

