[package]
name = "runar_keys"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Runar Keys"
license = "MIT"

[dependencies]
async-trait = "0.1"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
futures = "0.3"
tokio = { version = "1.37", features = ["sync", "rt", "macros"] }
runar_common = { path = "../runar-common", features = ["abstract_service"] }

# Cryptography dependencies
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core", "std"] }
ed25519-hd-key = "^0.3.0"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
serde_json = "1.0"

# ECDH and Symmetric Encryption
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10.1"
aead = "0.5.2"
hkdf = "0.12"
aes-gcm = "0.10"

# TLS/QUIC dependencies
rustls = { version = "0.23.28", features = ["std", "ring"] }
rustls-pki-types = "1.12.0"

# X.509 certificate handling
rcgen = { version = "0.13", features = ["pem"] }
x509-parser = "0.17"
der = { version = "0.7.8", features = ["derive", "pem"] }
time = { version = "0.3.34", features = ["formatting", "parsing"] }

# ECDSA P-256 support for TLS/QUIC
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pkcs8 = { version = "0.10", features = ["encryption"] }
pkcs1 = "0.7"
spki = "0.7"

keyring = "2.3"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "test-util"] }
runar_common = { path = "../runar-common", features = ["abstract_service"] }
runar_macros = { path = "../runar-macros" }
