[package]
name = "runar-keys"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core cryptographic libraries
p384 = { version = "0.13", features = ["ecdsa", "pkcs8", "serde", "ecdh"] }
ecdsa = "0.16"
pkcs8 = { version = "0.10", features = ["std"] }
rand = "0.8"

# Proper symmetric encryption (replaces XOR cipher)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Key derivation and hashing
hkdf = "0.12"
sha2 = "0.10"

# Certificate generation and parsing - OpenSSL for proper CA operations
openssl = { version = "0.10", features = ["vendored"] }
rcgen = "0.12"  # Still needed for CSR generation and self-signed CA certs
x509-parser = { version = "0.16", features = ["verify"] }
rustls-pki-types = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
base64 = "0.21"  # For compact Base64 URL-safe encoding of public keys

# Logging framework
runar_common = { path = "../runar-common" }

# Error handling
thiserror = "1.0"
anyhow = { workspace = true }
bincode = "1.3"
prost = { version = "0.12", default-features = false, features = ["std", "derive"] }

# Async runtime for tests
tokio = { version = "1.0", features = ["full"] }

# Optional dependencies for testing
[dev-dependencies]
tempfile = "3.0"

[features]
default = [] 