[package]
name = "runar_macros_common"
version = "0.1.0"
edition = "2021"
description = "Common macros for the Runar system"
authors = ["Runar Team"]
license = "MIT"

[dependencies]
runar-serializer = { path = "../runar-serializer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 