[package]
name = "runar-node-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for Runar Node"
authors = ["Runar Team"]
license = "MIT"

[dependencies]
runar_node = { path = "../runar-node" }
runar_macros_common = { path = "../runar-macros-common" }
runar-test-utils = { path = "../runar-test-utils" }
tokio = { version = "1.28", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 