[package]
name = "runar-node-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for Runar Node"
authors = ["Runar Team"]
license = "MIT"

[dependencies]
runar_node = { path = "../runar-node" }
runar_macros_common = { path = "../runar-macros-common" }
runar-test-utils = { path = "../runar-test-utils" }
runar-schemas = { path = "../runar-schemas" }
tokio = { version = "1.28", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.80"
runar-serializer = { path = "../runar-serializer-3" }
runar_common = { path = "../runar-common" }
prost = "0.12"
runar-keys = { path = "../runar-keys" }
uuid = "1.7"
rand = "0.8" 