[package]
name = "runar-node-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for Runar Node"
authors = ["Runar Team"]
license = "MIT"

[dependencies]
runar_node = { path = "../runar-node" }
runar_macros_common = { path = "../runar-macros-common" }
runar_test_utils = { path = "../runar-test-utils" }
runar-schemas = { path = "../runar-schemas" }
tokio = { version = "1.28", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
rustls = { version = "0.23.28" }
async-trait = "0.1.80"
runar-serializer = { version = "0.1", path = "../runar-serializer" }
runar_common = "0.1"
prost = "0.12"
runar-keys = { path = "../runar-keys" }
uuid = "1.7"
rand = "0.8" 
quinn = "0.11"

[dev-dependencies]
serial_test = "3"