[package]
name = "runar_node"
version = "0.1.0"
edition = "2021"
description = "Runar Node implementation"
authors = ["Runar Team"]
license = "MIT"

[dependencies]
dashmap = "5"
arc-swap = "1.6"
anyhow = "1.0"
async-trait = { workspace = true }
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
thiserror = "1.0"
env_logger = "0.10"
chrono = "0.4"
rand = "0.9.0"

# Local dependencies
runar_common = { path = "../runar-common" }
runar_keys = { path = "../runar-keys" }

# Network dependencies
quinn = { path = "../quinn/quinn" }
bytes = "1.4.0"
socket2 = "0.5.3"
rustls = { version = "0.23.28" }
rustls-pki-types = "1.12.0" # For Rustls certificate types
rustls-pemfile = "1.0.3"
rustls-native-certs = "0.6.2"
rcgen = "0.11.1"
bincode = "1.3.3"
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
webpki-roots = "0.25.0"  # For system root certificates

# For the example
tokio-stream = "0.1.14"
ring = { version = "0.17.14", features = ["std"] }
hex = "0.4.3"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pkcs8 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }


