[package]
name = "runar-nodejs-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
napi = { version = "3", default-features = false, features = ["napi8", "async", "compat-mode"] }
napi-derive = "3.2.4"
once_cell = "1.21.3"
runar-keys = { path = "../runar-keys", features = ["linux-keystore"] }
runar_transporter = { path = "../runar-transporter" }
serde_cbor = "0.11.2"
tokio = { workspace = true, features = ["full"] }
runar_common = { path = "../runar-common" }
runar-schemas = { path = "../runar-schemas" }
arc-swap = { package = "arc-swap", version = "1" }
runar-serializer = { path = "../runar-serializer" }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[features]
default = []
linux-keystore = ["runar-keys/linux-keystore"]

[lib]
crate-type = ["cdylib"]
