[package]
name = "runar-nodejs-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
license = "MIT"
description = "Node.js/Bun FFI bindings for Runar using napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# N-API bindings for Rust
napi = { version = "2.16.0", features = ["tokio_rt", "serde-json"] }
napi-derive = "2.16.0"

# Local Runar crates
runar_node = { path = "../runar-node" }
runar_common = { path = "../runar-common" }
runar-test-utils = { path = "../runar-test-utils" }
runar-serializer = { path = "../runar-serializer" }

# Utilities
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
once_cell = "1"

tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
anyhow = { workspace = true }
async-trait = { workspace = true }

# Tokio is required by napi's tokio_rt feature but we leverage workspace version
# It will be satisfied by workspace dependency resolution.

[features]
default = ["test-utils"]
test-utils = []

[build-dependencies]
napi-build = "2.2.2" 