[package]
name = "runar-poc-ffi"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "runar_poc_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
async-trait = "0.1"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
cbindgen = "0.24"
