[package]
name = "runar-serializer-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Derive macros for runar-serializer"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] } 