[package]
name = "runar-serializer-macros"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Derive macros for runar-serializer"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde_cbor = "0.11"
anyhow = { workspace = true } 
ctor = "0.2" 