[package]
name = "runar-serializer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Enhanced serialization with selective field encryption for Runar"
license.workspace = true

[dependencies]
runar_common = { path = "../runar-common" }
runar-keys = { path = "../runar-keys" }
runar-serializer-macros = { path = "../runar-serializer-macros" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prost = { version = "0.12", default-features = false, features = ["std", "derive"] }
log = { workspace = true }
rustc-hash = "1.1"
base64 = "0.21"
bincode = "1.3.3" 