[package]
name = "runar-serializer"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Enhanced serialization with selective field encryption for Runar"
license = "MIT"

[dependencies]
runar_common = { path = "../runar-common" }
runar-keys = { path = "../runar-keys" }
runar-serializer-macros = { path = "../runar-serializer-macros" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
prost = { version = "0.12", default-features = false, features = ["std", "derive"] }
log = "0.4" 
once_cell = "1.18"
dashmap = "5.5" 
ctor = "0.2" 