[package]
name = "runar-serializer"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Enhanced serialization with selective field encryption for Runar"
license = "MIT"
repository = "https://github.com/runar-labs/runar-rust"
homepage = "https://github.com/runar-labs/runar-rust"
documentation = "https://docs.rs/runar-serializer"
readme = "README.md"
keywords = ["serialization", "encryption", "serde"]
categories = ["encoding"]
rust-version = "1.70"

[dependencies]
runar_common = { path = "../runar-common" }
runar-keys = { version = "0.1", path = "../runar-keys" }
runar-serializer-macros = { version = "0.1", path = "../runar-serializer-macros" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
prost = { version = "0.12", default-features = false, features = ["std", "derive"] }
log = "0.4" 
once_cell = "1.18"
dashmap = "5.5" 
ctor = "0.2"
base64 = "0.21" 

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]