[package]
name = "runar_services"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "SQLite integration and utilities for the Runar ecosystem."
license = "MIT"

[dependencies]
async-trait = "0.1"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Added for crud_sqlite.rs
uuid = { version = "1.8", features = ["v4", "serde"] } # Added for crud_sqlite.rs
futures = "0.3"
tokio = { version = "1.37", features = ["sync", "rt", "macros"] }
runar_common = { path = "../runar-common", features = ["abstract_service"] }
runar_node = { path = "../runar-node" }
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "test-util"] }
runar_common = { path = "../runar-common", features = ["abstract_service"] }
runar_macros = { path = "../runar-macros" }
serde_json = "1.0"
# These are required for integration tests in tests/rusqlite_examples.rs
