[package]
name = "runar-test-utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities for Runar crates"
authors = ["Runar Team"]
license = "MIT"

[dependencies]
anyhow = "1.0"
runar_common = "0.1"
runar-keys = { path = "../runar-keys" }
runar_node = { path = "../runar-node" }
runar-serializer = { path = "../runar-serializer" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
